@startuml

title Modelo Conceitual

class User {
  name
  email
  passwordHash
  role
  createdAt
  updatedAt
}

class Session {
  token
  createdAt
  updatedAt
}

class Room {
  name
  createdAt
  updatedAt
}

class Product {
  name
  storage
  createdAt
  updatedAt
}

class Storage {
  quantity
  createdAt
  updatedAt
}

class ProductDistribution {
  quantity
  createdAt
  updatedAt
}

class Patient {
  name
  email
  cpf
  createdAt
  updatedAt
}

class Appointment {
  status
  createdAt
  updatedAt
}

enum Role {
  ADMIN
  SECRETARY
  DOCTOR
  STORAGE_MANAGER
}

enum AppointmentStatus {
  SCHEDULED
  ON_GOING
  CANCELED
  DONE
}

User "1" -- "0.." Session: pertence a

Room "1" -right- "0.." ProductDistribution: contém produtos

ProductDistribution "0..*" -- "1" Product: distribuido em salas

Product "0..*" -- "1" Storage: armazenado em

Appointment "0..*" -- "1" Patient: participa

Appointment "0..*" -- "1" User: atende a uma

Appointment "1" -right- "0..*" Room: ocorre em

note left of Appointment
  somente usuários
  com role médico
  possuem appointments
end note

@enduml
